--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,9 @@
 <div class="footer">
     <div class="container">
       <nav>
-        <%= link_to "Contact", 'pages/contact' %>
-        <%= link_to "HelpCenter", 'pages/help' %>
-        <%= link_to "About", 'pages/about' %>
+        <%= link_to "Contact", 'contact' %>
+        <%= link_to "HelpCenter", 'help' %>
+        <%= link_to "About", 'about' %>
       </nav>
     </div>
 </div>
